src/assets/global.scss
:root {
  --color-background: #fbf4e1;
  --color-text: #2c2203;
  --color-highlight: #d63a24;
}
*,
*::before,
*::after {
  position: relative;
  box-sizing: border-box;
  margin: 0;
  font-family: Arial, Helvetica, sans-serif;
  font-weight: normal;
}
body {
  min-height: 100vh;
  font-size: 16px;
  color: var(--color-text);
  background-color: var(--color-background);
}
ul {
  padding: 0;
  margin: 0;
  list-style: none;
}
#app {
  display: flex;
  flex-direction: column;
  max-width: 1280px;
  min-height: 100vh;
  padding: 0;
  margin: 0 auto;
  font-weight: normal;
  main {
    flex: 1;
  }
}
a {
  color: var(--color-text);
  text-decoration: none;
  -webkit-tap-highlight-color: transparent;
  &.router-link-active {
    color: var(--color-highlight);
  }
}
.container {
  padding: 30px 15px;
}
.header {
  display: flex;
  justify-content: center;
  padding: 10px 15px;
  border-bottom: 1px solid #b9b2a2;
  &--left {
    justify-content: flex-start;
  }
}
.button {
  display: inline-flex;
  gap: 4px;
  align-items: center;
  justify-content: center;
  padding: 10px 30px;
  color: #fff;
  white-space: nowrap;
  cursor: pointer;
  background: #281f10;
  border: none;
  border-radius: 8px;
  outline: none;
  transition: transform .2s;
  &--block {
    width: 100%;
  }
  &:hover,
  &:focus-visible {
    background-color: #52493a;
  }
  &:active {
    transform: scale(.99);
  }
}
.icon-button {
  display: inline-grid;
  place-items: center;
  padding: 0;
  color: #281f10;
  cursor: pointer;
  background: none;
  border: none;
  outline: none;
  svg {
    width: 28px;
    height: 28px;
  }
  &:hover,
  &:focus-visible {
    color: #52493a;
  }
}

